# Learn-Python-Programming-Third-Edition

./: .gitignore  README.md  data.pickle  requirements.in  requirements.txt  shelf1.shelve.db  shelf2.shelve.db
ch01/: README.md  bike.py  factorial.py  names.py  scopes1.py  scopes2.py  scopes3.py  virtualenv.creation.txt
ch02/: README.md  bytearray.py  chainmap.py  dateandtime.py  defaultdict.py  dicts.py  enum.py  final_considerations.py  lists.py  namedtuple.py  numbers.py  objects.py  requirements.txt  sequences.py  sets.py  tuples.py
ch03/: any.py  binary.2.py  binary.py  compress.py  conditional.1.py  conditional.2.py  coupons.dict.py  coupons.py  discount.py  errorsalert.py  for.else.py  for.no.else.py  infinite.py  menu.no.walrus.py  menu.walrus.py  multiple.sequences.enumerate.py  multiple.sequences.explicit.py  multiple.sequences.implicit.py  multiple.sequences.py  multiple.sequences.while.py  multiple.sequences.zip.py  permutations.py  primes.else.py  primes.py  range.py  simple.for.2.py  simple.for.3.py  simple.for.4.py  simple.for.py  switch.js  switch.py  taxes.py  ternary.py  walrus.if.py
ch04/: arguments.combined.py  arguments.keyword.py  arguments.multiple.value.py  arguments.positional.keyword.py  arguments.positional.py  arguments.unpack.dict.py  arguments.unpack.iterable.py  func_from.py  (+39 more)
ch15/skeleton-project/: README.md  setup.cfg
ch15/skeleton-project/example/: __init__.py
ch15/train-project/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
ch15/train-project/train_schedule/: __init__.py  __main__.py  cli.py  config.py  gui.py  metadata.py  resources.py
ch15/train-project/train_schedule/api/: __init__.py  schemas.py
ch15/train-project/train_schedule/models/: __init__.py  event.py  stations.py  trains.py
ch15/train-project/train_schedule/views/: __init__.py  about.py  config.py  dialog.py  formatters.py  main.py  stations.py  trains.py
(+225 files in other folders)
