[metadata]
name = your-project-name
author = Your Name
author_email = your.email@example.com
version = 0.0.0
description = A short description of your project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com/your/project

[options]
packages = find:

[options.extras_require]
test =
    pytest
