# train-project/setup.cfg
[metadata]
name = train-schedule
author = Heinrich Kruger, Fabrizio Romano
author_email = heinrich@example.com, fabrizio@example.com
version = 1.0.0
description = A train app to demonstrate Python packaging
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/PacktPublishing/Learn-Python-Programming-3E
project_urls =
    Learn Python Programming Book = https://www.packtpub.com/product/learn-python-programming-third-edition/9781801815093
license = MIT License
license_files = LICENSE
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = trains, packaging example

[options]
packages = find:
include_package_data = True
install_requires =
    platformdirs>=2.0
    pydantic>=1.8.2,<2.0
    requests~=2.0
python_requires = >=3.8

[options.extras_require]
dev =
    black
    flake8
    isort
    pdbpp

[options.entry_points]
console_scripts =
    train-schedule-cli = train_schedule.cli:main
gui_scripts =
    train-schedule = train_schedule.gui:main

[flake8]
max-line-length = 66
